[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Reema Eilouti <reema.eilouti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
jupyterlab = "^3.0.16"
pandas = "^1.2.4"
scikit-learn = "^0.24.2"
sklearn = "^0.0"
ipykernel = "^5.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
